--- a/index.html
+++ b/index.html
@@ -21,5 +21,15 @@
 </head>
 <body>
     <img src="White-stars.png" alt="">
+
+    <script>
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('/sw.js')
+    .then(() => console.log('Service Worker registered'))
+    .catch(err => console.log('SW failed', err));
+}
+</script>
+
+    
 </body>
 </html>
