--- a/index.html
+++ b/index.html
@@ -20,16 +20,6 @@
     </style>
 </head>
 <body>
-    <img src="White-stars.png" alt="">
-
-    <script>
-if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('/sw.js')
-    .then(() => console.log('Service Worker registered'))
-    .catch(err => console.log('SW failed', err));
-}
-</script>
-
-    
+<a href="http://167.172.235.74">http://167.172.235.74</a>
 </body>
 </html>
