--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     </style>
 </head>
 <body>
-<a href="http://167.172.235.74">http://167.172.235.74</a>
+<a href="http://167.172.235.74"><img src="White-stars.png" alt=""></a>
 </body>
 </html>
